--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -58,7 +58,12 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
       CI = 'true'
                 }
 
- stage('Artefact ') {                        
+ stage('Artefact ') {    
+
+  when {
+                beforeAgent true
+                branch 'production'
+            }                    
            container('buildah'){
                             git url: 'https://github.com/younes-bami/node.git', branch: 'master'
                             sh """
