--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -34,7 +34,7 @@ node(POD_LABEL) {
 			            sh """
                   cd \${PWD}
 			            npm install
-                  npm build
+                  npm run build
                   """
                              }
 
