--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -68,7 +68,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
                             git url: 'https://github.com/younes-bami/node.git', branch: 'master'
                             sh """
                             cd \${PWD}
-                            if (env.BRANCH_NAME == /(prod)/){
+                            if (env.BRANCH_NAME == 'prod'){
                               buildah build --layers=true  -t web-app:latest .
                             }
                             buildah images --all
@@ -80,7 +80,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
                           sh """
                           cd /home/skopeo
                           skopeo inspect containers-storage:localhost/web-app:latest 
-                          if (env.BRANCH_NAME == /(prod)/){
+                          if (env.BRANCH_NAME == 'prod'){
                             skopeo copy --dest-creds \${DOCKER_USR}:\${DOCKER_PWD} containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app 
                           }
                           """
