--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,8 +11,8 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
             container('node'){
 			            sh """
                   cd \${PWD}
-                  ls
 			            npm install
+                  npm run build
                   """
                              }
 
@@ -27,20 +27,31 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
 
     stage('Artefact ') {                        
            container('buildah'){
+                            if (env.BRANCH_NAME == 'production'){
+
                             sh """
                             cd \${PWD}
                             buildah images --all 
                             #buildah build --layers=true  -t web-app:latest .
                             """ 
-
+                              }
+                            sh """
+                                buildah images --all 
+                            """
                              }
       
           container('skopeo'){
+                        if (env.BRANCH_NAME == 'production'){
                           sh """
                           cd /home/skopeo
                           skopeo inspect containers-storage:localhost/web-app:latest
                           #skopeo copy --dest-creds \${DOCKER_USR}:\${DOCKER_PWD} containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app 
                           """
+                        }
+                        sh """
+                              skopeo inspect containers-storage:localhost/web-app:latest
+
+                        """
 
     
     }  
