--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,7 +5,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
       CI = 'true'
                 }
   stage ('Git'){
-            git url: 'https://github.com/younes-bami/node.git', branch: 'master'
+            git url: 'https://github.com/younes-bami/node.git', branch: 'feature/Two-pods-jenkinsfile'
     }
     stage ('Build'){
             container('node'){
